--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/app": "14.1.0",
     "@react-native-firebase/auth": "^13.0.1",
+    "@react-native-firebase/firestore": "^14.1.0",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-dash": "^0.0.11",
     "react-native-date-picker": "^4.1.3",
+    "react-native-gesture-handler": "^2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.0.0",
     "yup": "^0.32.11"
   },
