--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/netinfo": "^7.1.7",
     "@react-native-firebase/app": "14.1.0",
     "@react-native-firebase/auth": "^13.0.1",
     "@react-native-firebase/firestore": "^14.1.0",
@@ -20,6 +22,7 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-config": "^1.4.5",
     "react-native-dash": "^0.0.11",
     "react-native-date-picker": "^4.1.3",
     "react-native-gesture-handler": "^2.1.0",
