Add Multi language support + delete feature

--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@react-native-firebase/app": "14.1.0",
     "@react-native-firebase/auth": "^13.0.1",
     "@react-native-firebase/firestore": "^14.1.0",
+    "@react-native-firebase/in-app-messaging": "^14.10.1",
+    "@react-native-firebase/messaging": "^14.10.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "i18next": "^21.8.4",
     "react": "17.0.2",
+    "react-i18next": "^11.16.7",
     "react-native": "0.66.3",
     "react-native-config": "^1.4.5",
     "react-native-dash": "^0.0.11",
